--- a/cvpage.html
+++ b/cvpage.html
@@ -22,7 +22,7 @@
     <nav class="col-md-10 data-spy="affix"" id="navbar">
       <ul class="nav justify-content-center">
         <li class="">
-          <li class="sidebar-brand"><a class="nav-link active" href="homepage.html">Home</a></li>
+          <li class="sidebar-brand"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="cvpage.html">My CV</a></li>
           <li class="nav-item"><a class="nav-link active" href="projectpage.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link active" href="contactme.html">Contact me</a></li>
